add navbar and footer

--- a/blog/src/app/home/home.component.html
+++ b/blog/src/app/home/home.component.html
@@ -1,1 +1,17 @@
-<p>home works!</p>
+<div class="container w-100">
+    <div class="row w-100 mt-5">
+        <div class="col-md-12">
+            <h1 class="display-4"><strong>É bom te ver por aqui!</strong></h1>
+        </div>
+    </div>
+
+    <div class="row w-100 my-4">
+        <div class="col-md-12">
+            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam totam saepe expedita explicabo nihil illum ullam maxime quaerat placeat distinctio reiciendis obcaecati dicta officiis eos, minima repellat! Minus, repellendus ducimus?</p>
+            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam totam saepe expedita explicabo nihil illum ullam maxime quaerat placeat distinctio reiciendis obcaecati dicta officiis eos, minima repellat! Minus, repellendus ducimus?</p>
+            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam totam saepe expedita explicabo nihil illum ullam maxime quaerat placeat distinctio reiciendis obcaecati dicta officiis eos, minima repellat! Minus, repellendus ducimus?</p>
+        </div>
+    </div>
+
+</div>
+<div class="parallax"></div>
