add feed component

--- a/blog/src/app/navbar/navbar.component.html
+++ b/blog/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         mr-auto 
         w-100 
         d-flex 
-        justify-content-center
+        justify-content-end
         text-uppercase 
         font-weight-bold">
             <li class="nav-item active">
