--- a/blog/src/app/home/home.component.html
+++ b/blog/src/app/home/home.component.html
@@ -15,3 +15,11 @@
 
 </div>
 <div class="parallax"></div>
+
+<div class="row w-100 my-5">
+    <div class="col-md-12 w-100 d-flex justify-content-center align-itens-center">
+        <button class="btn btn-outline-dark text-uppercase font-weight-bold" routerLink='/feed'>
+            Ver o feed
+        </button>
+    </div>
+</div>
