--- a/blog/src/app/navbar/navbar.component.html
+++ b/blog/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
-    <a class="navbar-brand" href="#">Blog</a>
+    <a class="navbar-brand" routerLink='/home'>Blog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -13,11 +13,11 @@
         justify-content-end
         text-uppercase 
         font-weight-bold">
-            <li class="nav-item active">
-                <a class="nav-link p-3 texto" href="#">Home<span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link p-3 texto" routerLink='/home'>Home<span class="sr-only"></span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link p-3 texto" href="#">Feed</a>
+                <a class="nav-link p-3 texto" routerLink='/feed'>Feed</a>
             </li>
         </ul>
     </div>
