--- a/blog/src/app/perfil-lateral/perfil-lateral.component.html
+++ b/blog/src/app/perfil-lateral/perfil-lateral.component.html
@@ -4,7 +4,7 @@
             class="card-img-top rounded-circle w-75" alt="...">
     </div>
     <div class="card-body p-0">
-        <h5 class="card-title text-center mt-3">Diana Coelho</h5>
+        <h5 class="card-title text-center mt-3">{{nome}}</h5>
         <p class="card-text text-center">Some quick example text to build on the card title and make up the bulk of the
             card's content.</p>
         <div>
