--- a/blog/src/styles.css
+++ b/blog/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body  {overflow-y:scroll;}
+
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 5px;
+  }
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(87, 87, 87);
+    -webkit-box-shadow: 0 0 1px rgba(250, 250, 250, 0.5);
+  }
